Roughly re-implemented tiltshift plus other fixes.

--- a/css/style.css
+++ b/css/style.css
@@ -185,6 +185,14 @@ html, body, #wrapper, .container {
   color: #fff;
 }
 
+.field.collapsible.presets ul {
+  list-style: none;
+}
+
+.field.collapsible.presets li {
+  margin-top: 0.5em;
+}
+
 /* Scrollbar styling */
 ::-webkit-scrollbar {
     background: rgba(255, 255, 255, 0.2);
@@ -222,20 +230,22 @@ html, body, #wrapper, .container {
 }
 
 .code.tiltshift-extreme {
-  -webkit-mask-box-image: linear-gradient(transparent 0%, black 50%, transparent 100%);
+  display: block;
+  filter: none;
+  -webkit-mask-box-image: linear-gradient(transparent 0%, black 30%, black 50%, black 70%, transparent 100%);
 }
 
 .code-overlay.tiltshift-extreme {
   display: block;
-  filter: blur(4px);
-  -webkit-mask-box-image: linear-gradient(black 0%, transparent 40%, black 100%);
+  filter: blur(3px);
+  -webkit-mask-box-image: linear-gradient(black 0%, transparent 50%, black 100%);
 }
 
 .code-overlay {
   display: none;
   position: absolute;
-  top: -1em;
-  left: 0;
+  top: 4px;
+  left: -2px;
   background: none;
   pointer-events: none;
 }
